@startuml adaptor
class Main {

}

interface Print {
    {abstract} +printWeak()
    {abstract} +printStrong()
}

class PrintBanner implements Print {
    +printWeak()
    +printStrong()
}

class Banner {
    +showWithParen()
    +showWithAster()
}

Main --> Print : Uses >
PrintBanner o--> Banner
@enduml